# imagine_asc

./: .gitmodules  10_10.txt  12_12.txt  20_20.txt  CMakeLists.txt  README.md  package.xml  predicted_effects.pickle
launch/: imagine_asc.launch  imagine_no_asc.launch
scripts/: aff_tester.py  affordance.py  asc.py  cut.py  effect_marker.py  effect_marker_client.py  lever_up.py  no_asc.py  push.py  screwability.py  suckablity.py  unet_model.py
scripts/adapt_cut/: README.md  train_cut.py
scripts/lever_up_pn/: Blocks.py  DatasetLoader.py  Networks.py  lev_up_scaler.pickle  lev_up_weights.hdf5  lever_up_effect.py
scripts/lever_up_pn/trajectories/lev_up_no_wall/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
scripts/lever_up_pn/trajectories/lev_up_wall/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
